[tool.poetry]
name = "probabalistic-tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["Peter Villano <peter@saej.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
